# static_data

./: CMakeLists.txt  Doxyfile.in  Makefile  README.org
static_data/: CMakeLists.txt  config.hpp.in  import.hpp  list.hpp  nothing.hpp  queue.hpp  stack.hpp  static_data.hpp  zipper.hpp
static_data_testing/: CMakeLists.txt  list_test.cpp  nothing_test.cpp  stack_test.cpp  test_macros.hpp  zipper_test.cpp
